objects/Academy_Certification_Delivery__c.object
<CustomObject>
    <description>Academy Certification Delivery holds the date and type of certification.</description>
    <fields>
        <fullName>Academy_Certification_Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academy Certification Student</label>
        <referenceTo>Academy_Certification_Student__c</referenceTo>
        <relationshipLabel>Academy Certification Deliveries</relationshipLabel>
        <relationshipName>Academy_Certification_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Academy Certification Program, for example: Release Manager I</description>
        <label>Certification Program</label>
        <referenceTo>Academy_Certification_Program__c</referenceTo>
        <relationshipLabel>Academy Certification Deliveries</relationshipLabel>
        <relationshipName>Academy_Certification_Deliveries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Where is the Certification going to be delivered</description>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>OnSite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Academy Certification Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Certification_Program__c</columns>
        <columns>Academy_Certification_Student__c</columns>
        <columns>Location__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACD-{0000}</displayFormat>
        <label>Academy Certification Delivery</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Certification Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>